[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/BasicMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Resources/Buttons-Icons.png" type="Texture" id=2]


[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 300, 100, 100 )

[node name="BasicMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 115.0
margin_bottom = 115.0
rect_min_size = Vector2( 75, 75 )
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = SubResource( 1 )
texture_hover = SubResource( 2 )
expand = true
stretch_mode = 5

[node name="BackButton" type="TextureButton" parent="."]
visible = false
margin_left = 15.0
margin_top = 15.0
margin_right = 115.0
margin_bottom = 115.0
rect_min_size = Vector2( 75, 75 )
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = SubResource( 3 )
texture_hover = SubResource( 4 )

[node name="SoundsButtons" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -168.0
margin_top = 15.0
margin_right = 36.0
margin_bottom = 115.0
rect_min_size = Vector2( 75, 75 )
rect_scale = Vector2( 0.75, 0.75 )
alignment = 1

[node name="MusicButton" type="TextureButton" parent="SoundsButtons"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = SubResource( 5 )
texture_hover = SubResource( 6 )

[node name="SoundButton" type="TextureButton" parent="SoundsButtons"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture_normal = SubResource( 7 )
texture_hover = SubResource( 8 )

[connection signal="visibility_changed" from="." to="." method="_on_BasicMenu_visibility_changed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SoundsButtons/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="SoundsButtons/SoundButton" to="." method="_on_SoundButton_pressed"]
